--- a/packages.yml
+++ b/packages.yml
@@ -2,10 +2,8 @@ packages:
 # - package: fivetran/shopify_source
 #   version: [">=0.7.0", "<0.8.0"]
 
-  # - git: https://github.com/fivetran/dbt_shopify_source.git
-  #   revision: feature/revamp/transform-enhancements
-  #   warn-unpinned: false
-
-  - local: ../dbt_shopify_source
+  - git: https://github.com/fivetran/dbt_shopify_source.git
+    revision: feature/metafields
+    warn-unpinned: false
   - package: calogica/dbt_expectations
     version: [">=0.8.0", "<0.9.0"]
