--- a/packages.yml
+++ b/packages.yml
@@ -3,5 +3,5 @@ packages:
 #   version: [">=0.7.0", "<0.8.0"]
 
   - git: https://github.com/fivetran/dbt_shopify_source.git
-    revision: feature/metafields
+    revision: feature/package-revamp
     warn-unpinned: false
