--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -7,7 +7,7 @@ models:
     +schema: shopify
     +materialized: table
     intermediate:
-      +materialized: table # testing for now - switch to ephemeral
+      +materialized: ephemeral
       int_shopify__customer_email_rollup:
         +materialized: view # so we can use the dbt_utils.star macro
         
